update content 1.1 - update title and remove button

--- a/26/alert-sunbird/architectural-consultancy/index (1).html
+++ b/26/alert-sunbird/architectural-consultancy/index (1).html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Architectural Consultancy</title>
+    <title>MAMPU | ARCHITECTURAL CONSULTANCY</title>
     <meta name="robots" content="max-image-preview:large" />
     <!-- Google Tag Manager -->
     <script>
@@ -1227,7 +1227,7 @@
                   <div class="elementor-widget-container">
                     <h2 class="elementor-heading-title elementor-size-default">
                       <a href="https://mampu.our-construction.com/26/alert-sunbird/"
-                        >MAMPU BERSATU SDN. BHD. (787075-A)</a
+                        >MAMPU BERSATU SDN. BHD</a
                       >
                     </h2>
                   </div>
