--- a/26/alert-sunbird/architectural-consultancy/index.html
+++ b/26/alert-sunbird/architectural-consultancy/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Architectural Consultancy</title>
+    <title>MAMPU | ARCHITECTURAL CONSULTANCY</title>
     <meta name="robots" content="max-image-preview:large" />
     <!-- Google Tag Manager -->
     <script>
@@ -1182,7 +1182,7 @@ How awesome is that?🤯"
       class="tbdemo-popup-overlay tbdemo-big-popup-overlay"
       style="display: none"
     ></div>
-    <a
+    <!--<a
       href="https://10web.io/ai-website-builder/"
       target="_blank"
       class="tbdemo-madebar-border-container"
@@ -1191,7 +1191,7 @@ How awesome is that?🤯"
       <div class="tbdemo-madebar-container">
         <span>Made by 10Web</span>
       </div>
-    </a>
+    </a>-->
     <script type="text/template" id="tbdemo-ai-template">
       <div class="tbdemo-ai-front">
           <div class="tbdemo-ai-front-layout" style="display: none"></div>
@@ -1671,7 +1671,7 @@ How awesome is that?🤯"
                   <div class="elementor-widget-container">
                     <h2 class="elementor-heading-title elementor-size-default">
                       <a href="https://mampu.our-construction.com/26/alert-sunbird/"
-                        >MAMPU BERSATU SDN. BHD. (787075-A)</a
+                        >MAMPU BERSATU SDN. BHD</a
                       >
                     </h2>
                   </div>
