update content 1.4 - update contact detail

--- a/26/alert-sunbird/contact/index (1).html
+++ b/26/alert-sunbird/contact/index (1).html
@@ -1525,7 +1525,7 @@
                         </div>
                       </div>
                     </div>
-                    <div
+                    <!--<div
                       class="elementor-element elementor-element-be2d680 elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons"
                       data-id="be2d680"
                       data-element_type="widget"
@@ -1575,7 +1575,7 @@
                           </span>
                         </div>
                       </div>
-                    </div>
+                    </div>-->
                   </div>
                   <div
                     class="elementor-element elementor-element-4e7dc62 e-con-full e-flex e-con e-parent"
@@ -1713,7 +1713,7 @@
               </div>
             </div>
           </div>
-          <div
+          <!--<div
             class="elementor-element elementor-element-61ecc3f e-con-full e-flex e-con e-parent"
             data-id="61ecc3f"
             data-element_type="container"
@@ -1745,7 +1745,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
