--- a/26/alert-sunbird/contact/index.html
+++ b/26/alert-sunbird/contact/index.html
@@ -1969,7 +1969,111 @@ How awesome is that?🤯"
                         </div>
                       </div>
                     </div>
-                    <div
+                                          <div
+                                            class="elementor-element elementor-element-9003b0f elementor-widget elementor-widget-heading"
+                                            data-id="9003b0f"
+                                            data-element_type="widget"
+                                            data-widget_type="heading.default"
+                                          >
+                                            <div
+                                              class="elementor-widget-container"
+                                            >
+                                              <h5
+                                                class="elementor-heading-title elementor-size-default"
+                                              >
+                                                Contact Number:
+                                              </h5>
+                                            </div>
+                                          </div>
+                                          <div
+                                            class="elementor-element elementor-element-8b4e5d9 elementor-widget elementor-widget-text-editor"
+                                            data-id="8b4e5d9"
+                                            data-element_type="widget"
+                                            data-widget_type="text-editor.default"
+                                          >
+                                            <div
+                                              class="elementor-widget-container"
+                                            >
+                                              <div
+                                                class="elementor-text-editor elementor-clearfix"
+                                              >
+                                                <p>085-216980</p>
+                                              </div>
+                                            </div>
+                                          </div>
+                                          <div
+                                            class="elementor-element elementor-element-a3e86b7 elementor-widget elementor-widget-heading"
+                                            data-id="a3e86b7"
+                                            data-element_type="widget"
+                                            data-widget_type="heading.default"
+                                          >
+                                            <div
+                                              class="elementor-widget-container"
+                                            >
+                                              <h5
+                                                class="elementor-heading-title elementor-size-default"
+                                              >
+                                                Send Us Mail
+                                              </h5>
+                                            </div>
+                                          </div>
+                                          <div
+                                            class="elementor-element elementor-element-dc3ee1e elementor-widget elementor-widget-text-editor"
+                                            data-id="dc3ee1e"
+                                            data-element_type="widget"
+                                            data-widget_type="text-editor.default"
+                                          >
+                                            <div
+                                              class="elementor-widget-container"
+                                            >
+                                              <div
+                                                class="elementor-text-editor elementor-clearfix"
+                                              >
+                                                <p>
+                                                  <a
+                                                    href="/cdn-cgi/l/email-protection"
+                                                    class="__cf_email__"
+                                                    data-cfemail="82ebece4edc2e7fae3eff2eee7ace1edef"
+                                                    >info@mampu@our-construction.com</a
+                                                  >
+                                                </p>
+                                              </div>
+                                            </div>
+                                          </div>
+                                          <div
+                                            class="elementor-element elementor-element-3132b09 elementor-widget elementor-widget-heading"
+                                            data-id="3132b09"
+                                            data-element_type="widget"
+                                            data-widget_type="heading.default"
+                                          >
+                                            <div
+                                              class="elementor-widget-container"
+                                            >
+                                              <h5
+                                                class="elementor-heading-title elementor-size-default"
+                                              >
+                                                Find us at
+                                              </h5>
+                                            </div>
+                                          </div>
+                                          <div
+                                            class="elementor-element elementor-element-dc3ee1e elementor-widget elementor-widget-text-editor"
+                                            data-id="dc3ee1e"
+                                            data-element_type="widget"
+                                            data-widget_type="text-editor.default"
+                                          >
+                                            <div
+                                              class="elementor-widget-container"
+                                            >
+                                              <div
+                                                class="elementor-text-editor elementor-clearfix"
+                                              >
+                                                <p>Lot 265, Tingkat Dua, 13 Jalan Masjid Baru, Lawas District Town, 98850 Lawas, Sarawak.</p>
+                                              </div>
+                                            </div>
+                                          </div>
+
+                    <!--<div
                       class="elementor-element elementor-element-be2d680 elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons"
                       data-id="be2d680"
                       data-element_type="widget"
@@ -2019,7 +2123,7 @@ How awesome is that?🤯"
                           </span>
                         </div>
                       </div>
-                    </div>
+                    </div>-->
                   </div>
                   <div
                     class="elementor-element elementor-element-4e7dc62 e-con-full e-flex e-con e-parent"
@@ -2157,7 +2261,7 @@ How awesome is that?🤯"
               </div>
             </div>
           </div>
-          <div
+          <!--<div
             class="elementor-element elementor-element-61ecc3f e-con-full e-flex e-con e-parent"
             data-id="61ecc3f"
             data-element_type="container"
@@ -2189,7 +2293,7 @@ How awesome is that?🤯"
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
