--- a/26/alert-sunbird/index.html
+++ b/26/alert-sunbird/index.html
@@ -1877,7 +1877,7 @@ How awesome is that?🤯"
                     <div class="elementor-button-wrapper">
                       <a
                         class="elementor-button elementor-button-link elementor-size-sm"
-                        href="#"
+                        href="https://mampu.our-construction.com/26/alert-sunbird/contact/"
                       >
                         <span class="elementor-button-content-wrapper">
                           <span class="elementor-button-text">LET'S TALK</span>
