--- a/26/alert-sunbird/index (1).html
+++ b/26/alert-sunbird/index (1).html
@@ -1713,7 +1713,7 @@
                       </div>
                     </div>
                   </div>
-                  <div
+                  <!--<div
                     class="elementor-element elementor-element-94d9117 e-con-full e-flex e-con e-parent"
                     data-id="94d9117"
                     data-element_type="container"
@@ -1746,7 +1746,7 @@
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
