--- a/index.html
+++ b/index.html
@@ -2157,7 +2157,7 @@ How awesome is that?🤯"
                       </div>
                     </div>
                   </div>
-                  <div
+                  <!--<div
                     class="elementor-element elementor-element-94d9117 e-con-full e-flex e-con e-parent"
                     data-id="94d9117"
                     data-element_type="container"
@@ -2190,7 +2190,7 @@ How awesome is that?🤯"
                         </div>
                       </div>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
