update content 2.0 - remove placeholder

--- a/26/alert-sunbird/services/index (1).html
+++ b/26/alert-sunbird/services/index (1).html
@@ -3561,7 +3561,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div
+                                        <!--<div
                                           class="elementor-element elementor-element-46ee318 e-con-full e-flex e-con e-parent"
                                           data-id="46ee318"
                                           data-element_type="container"
@@ -3600,7 +3600,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                        </div>
+                                        </div>-->
                                       </div>
                                     </div>
                                   </div>
@@ -4057,7 +4057,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div
+                                      <!--<div
                                         class="elementor-element elementor-element-7a72a1e e-con-full e-flex e-con e-parent"
                                         data-id="7a72a1e"
                                         data-element_type="container"
@@ -4159,7 +4159,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                      </div>
+                                      </div>-->
                                     </div>
                                   </div>
                                 </div>
