--- a/26/alert-sunbird/services/index.html
+++ b/26/alert-sunbird/services/index.html
@@ -4005,7 +4005,7 @@ How awesome is that?🤯"
                                             </div>
                                           </div>
                                         </div>
-                                        <div
+                                        <!--<div
                                           class="elementor-element elementor-element-46ee318 e-con-full e-flex e-con e-parent"
                                           data-id="46ee318"
                                           data-element_type="container"
@@ -4044,7 +4044,7 @@ How awesome is that?🤯"
                                               </div>
                                             </div>
                                           </div>
-                                        </div>
+                                        </div>-->
                                       </div>
                                     </div>
                                   </div>
@@ -4501,7 +4501,7 @@ How awesome is that?🤯"
                                           </div>
                                         </div>
                                       </div>
-                                      <div
+                                      <!--<div
                                         class="elementor-element elementor-element-7a72a1e e-con-full e-flex e-con e-parent"
                                         data-id="7a72a1e"
                                         data-element_type="container"
@@ -4603,7 +4603,7 @@ How awesome is that?🤯"
                                             </div>
                                           </div>
                                         </div>
-                                      </div>
+                                      </div>-->
                                     </div>
                                   </div>
                                 </div>
